[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "flasktemplate"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^2.0.0"
python = "^3.8"
Flask-Cors = "^3.0.10"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]
